Bug 122455 - FILESAVE: RTF: Font size changes after RT
Summary: FILESAVE: RTF: Font size changes after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2019-01-03 22:48 UTC by Xisco Faulí
Modified: 2019-02-11 13:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (13.34 KB, application/rtf)
2019-01-03 22:48 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-01-03 22:48:59 UTC
Created attachment 147981 [details]
sample document

Steps to reproduce:
1. Open attached document
2. Save it as .RTF
3. Open the new document

-> First line changes size from 16 to 32

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 49c61f660d05ab13140d4349a0b3f6efba742022
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-01-03 22:49:36 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=49614a9ea971ff7f370f863ce8a2735aab973cee

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-09-24 23:07:16 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-09-25 08:40:12 +0200
commit 49614a9ea971ff7f370f863ce8a2735aab973cee (patch)
tree cb4dcde41909007d9f9c31d0b0d9e1cef2e0a43b
parent 7a8acab1ee7a9396b514e901b1e4fbd51bacb586 (diff)
tdf#119599 RTF import: fix missing deduplication of font size

Bisected with: bibisect-linux64-6.2

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2019-01-15 08:22:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/57d3c927eff495702cd12f2a15ef0763f51977a7%5E%21

tdf#122455 RTF export: fix font style from list def leaking into first para

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-01-15 15:53:26 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: c977473546e450ec122f5d3dbc4578d8994962ef
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, Thanks for fixing this!!
Comment 4 Commit Notification 2019-02-11 13:55:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/b22e65d4b44f9a778c372929a7461ba5b17f7314%5E%21

tdf#122455 RTF export: fix font style from list def leaking into first para

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.