tdf#122455 RTF export: fix font style from list def leaking into first para

This was a problem since RtfAttributeOutput::NumberingLevel() started to
use OutputItemSet() or when m_aStyles and m_aStylesEnd was separated,
but both were already like this in commit
5bbc027d5dae3472223538b13933ff821e027737 (cws-vmiklos01.diff: Better RTF
export filter, 2010-09-17).

If m_aStylesEnd is not consumed by NumberingLevel(), then the first run
will include its contents, which is incorrect.

Change-Id: Ifc93ae5f0057102fab636febae5ee2462361878e